<resources>
    <string name="app_name">Scarlet Pizza</string>
    <string name="phone_number">Phone number</string>
    <string name="app_name2">Order Deluxe</string>
    <string-array name="size_array">
        <item name="small_size">Small</item>
        <item name="medium_size">Medium</item>
        <item name="large_size">Large</item>
    </string-array>
    <string name="array_label">Pizza Size</string>
    <string name="add_toppings">Additional Toppings</string>
    <string name="sel_toppings">Selected Toppings</string>
    <string name="add_button">Add Topping</string>
    <string name="rem_button">Remove Topping</string>
    <string name="price_label">Price: $</string>
    <string name="base_value_label">0.00</string>
    <string name="add_order">Add to Order</string>
    <string name="deluxe_click">deluxeClick</string>
    <string name="deluxe">Deluxe Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="phone_text">Customer Phone Number</string>
    <string name="sale_tax">Sales tax $</string>
    <string name="subtotal">Subtotal $</string>
    <string name="total_amount">Order Total $</string>
    <string name="remove_order">Remove Order</string>
    <string name="add_hint">Click a topping to add it</string>
    <string name="remove_hint">Click a topping to remove it</string>
    <string name="pizza_label">Order Pizza</string>
    <string name="curr_label">Current Order</string>
    <string name="store_label">Store Orders</string>
</resources>